# dotfiles

./: .bash_aliases  .bash_logout  .bashrc  .gitconfig  .profile  .wslconfig  .zsh_aliases  .zsh_utils  .zshrc  README.md  gnome-terminal-profiles.dconf  gnome-terminal-settings.txt  install-go  install-nvm
.config/Code/User/: keybindings.json  settings.json
.config/kanata/: keymap.kdb
.config/micro/: bindings.json  settings.json
.config/micro/colorschemes/: gruvbox-plain.micro
.git-template/hooks/: prepare-commit-msg
.iterm2/: com.googlecode.iterm2.plist
.local/share/applications/: scale-text.desktop
AppData/Roaming/Code/User/: keybindings.json  settings.json
Documents/PowerShell/: profile.ps1
Documents/WindowsPowerShell/: profile.ps1
dev/scripts/: install-micro  install-mise
install-scripts/: install-fnm  install-go  install-micro  install-node  install-nvm  install-pyenv  install-ripgrep  install-zsh  install-zsh-plugins  update-discord
scripts/: configure-modifier-keys.sh  install-ripgrep  update-vscode
scripts/configure-modifier-keys.app/Contents/: Info.plist  document.wflow
scripts/configure-modifier-keys.app/Contents/MacOS/: Automator Application Stub
scripts/configure-modifier-keys.app/Contents/_CodeSignature/: CodeResources
util-scripts/: Cargo.toml  prepend_newline.rs  reinit_git_hooks.rs  scale-text.sh  sort-git-status  sort-git-status.py
util-scripts/switch-right-cmd-opt-keys.app/Contents/: Info.plist  document.wflow
zsh/: aliases  env  keybindings  utils
(+7 files in other folders)
