[package]
name = "util-scripts"
version = "0.1.0"
edition = "2021"
authors = ["hermannm"]

[[bin]]
name = "gen-uuid"
path = "gen_uuid.rs"

[[bin]]
name = "gen-timestamp"
path = "gen_timestamp.rs"

[[bin]]
name = "prepend-newline"
path = "prepend_newline.rs"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
