[package]
name = "util-scripts"
version = "0.1.0"
edition = "2021"
authors = ["hermannm"]

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
walkdir = "2.5.0"
